--- a/lib/css/Layout.css
+++ b/lib/css/Layout.css
@@ -33,7 +33,7 @@
 @media screen and (min-width: 800px) {
   .col,
   .well {
-    min-width: 50%;
+    width: 50%;
   }
 
   .row {
@@ -44,13 +44,13 @@
 @media screen and (min-width: 1200px) {
   .col,
   .well {
-    min-width: 33.33%;
+    width: 33.33%;
   }
 }
 
 @media screen and (min-width: 1600px) {
   .col,
   .well {
-    min-width: 25%;
+    width: 25%;
   }
 }
