--- a/lib/css/index.css
+++ b/lib/css/index.css
@@ -22,6 +22,10 @@ body {
   --green: rgba(13,221,105,1);
   --red: rgba(191,54,12,1);
 
+  --overlay: rgba(0,0,0,0.4);
+  --box-shadow: 0 0 8px rgba(0,0,0,.2), 0 8px 16px rgba(0,0,0,.4);
+
+
   --line-height-p: 1.5em;
   --font-weight-400: 400;
   --font-weight-500: 500;
@@ -38,4 +42,9 @@ body {
   font-size: 100%;
   color: var(--black);
   background: var(--gray);
+}
+
+.overflow-hidden {
+  height: 100%;
+  overflow: hidden;
 }
